<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_admin_home"
        android:icon="@drawable/baseline_home_24"
        android:title="Home" />

    <item
        android:id="@+id/nav_admin_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search" />

    <item
        android:id="@+id/nav_admin_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="Profile" />
</menu>