<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/switch_to_entrant"
        android:title="Switch to Entrant" />
    <item
        android:id="@+id/switch_to_organizer"
        android:title="Switch to Organizer" />
    <item
        android:id="@+id/switch_to_admin"
        android:title="Switch to Admin" />
</menu>