<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/white"
        app:tabTextColor="@android:color/black"
        app:tabSelectedTextColor="@android:color/black"
        app:tabIndicatorHeight="3dp"
        app:tabMode="fixed"
        app:tabGravity="fill"
        app:tabTextAppearance="@style/TabTextAppearance"
        app:tabSelectedTextAppearance="@style/TabTextAppearance.Selected"
        app:tabPaddingBottom="0dp"
        app:tabPaddingTop="10dp"
        app:tabRippleColor="@null"
        app:tabIndicatorFullWidth="false"
        app:tabIndicator="@drawable/tab_indicator"/>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>